--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <p>
                         Imagen de <a target="_blank" href="https://www.freepik.es/foto-gratis/mujer-mostrando-sus-hermosas_10368202.htm#query=mujer-mostrando-sus-hermosas&position=0&from_view=search&track=sph">Freepik</a>
                         </p>
-                  <p>Imagen de <a href="https://www.freepik.es/vector-gratis/boceto-pelo-chica_749710.htm#query=hair%20style&position=42&from_view=search&track=robertav1_2_sidr">Freepik</a>
+                  <p>Imagen de <a target="_blank" href="https://www.freepik.es/vector-gratis/boceto-pelo-chica_749710.htm#query=hair%20style&position=42&from_view=search&track=robertav1_2_sidr">Freepik</a>
                   </p>
                         <p>
                         <a target="_blank" href="https://www.freepik.es/foto-gratis/peluqueria-corto-cabello-su-cliente-peluqueria_5912229.htm#query=peluqueria-corto-cabello-su-cliente-peluqueria&position=0&from_view=search&track=sph">Imagen de prostooleh</a> en Freepik
